# Notes

./: .gitignore  .gitmodules  Readme.md  cleangit.sh  todo.md
CI/: travis-ci.md
block chain/: Readme.md  block chain.md  crypto.md  outline.md
block chain/Basic/: Bancor.md  EOS.md  Monero.md  application.md  block chain.md  consensus.md  crypto.md  exchange.md  news.md  proof of work.md
block chain/Basic/src/: client.json
block chain/Ethereum/: Ethereum.md  Solidity.md
block chain/Ethereum/docs/: pos.md  white paper.md
block chain/IPFS/: basic.md
block chain/Tutor/: 01.到底什么才是区块链.md  02.区块链到底是怎么运行的.md  03.浅说区块链共识机制.md  outline.md
block chain/Tutorial/: 01.到底什么才是区块链.md  02.区块链到底是怎么运行的.md  03.浅说区块链共识机制.md  04.区块链的应用类型.md  Readme.md
books/: 1.快速阅读术.md  note.md
db/: es.md  redis.md
db/redis/: redis.md  redis2.md
db/redis/examples/: 06.py  07.py  persistence.py  vote_for_articles.py  web_cookies.py
debug/: RTTI.md  dll.md  linux.md  monitor.md
devops/: Selenium.md  conan.md  coverity.md  cpplint.md  docker.md  travis-ci.md  travis.md  vagrant.md
distribute/: consistent hashing.md  cookie.md  distribute.md
gstreamer/: Readme.md  tshell.cmd  tshell.sh
gstreamer/doc/: basic.md  clock.md  gst-inspect.md  gst-launch.md  gst-rtsp-server.md  gstreamer工具1.md  gstreamer工具2.md  gstrtspsrc.c  multipoints.md  pad.md  pipeline.md  probe.md  proxysink-src.md  rtsp-server.md  rtsp-server2.md  rtspsrc.md
gstreamer/doc/rtsp/: rtsp-server1.md
gstreamer/doc/webrtc/: sdp.md  webrtc.md
gstreamer/src/: Readme.md  display.html  gstproxysink.h  gstproxysrc.c
gstreamer/src/proxysink-src/: gstproxysink.c  gstproxysrc.h
gstreamer/src/webrtc/: CMakeLists.txt  Readme.md  build.sh  env.bat  sdp.md
gstreamer/src/webrtc/examples/: CMakeLists.txt  Readme.md  build.bat  env.bat
gstreamer/src/webrtc/examples/gstwebrtc-demos/signalling/: README.md
gstreamer/src/webrtc/examples/simple/: webrtc.c  webrtcbidirectional.c
gstreamer/src/webrtc/gstwebrtc-demos/sendrecv/gst/: Readme.md  webrtc-sendrecv.c
gstreamer/src/webrtc/gstwebrtc-demos/signalling/: README.md  generate_cert.bat
gstreamer/src/webrtc/mp/: CMakeLists.txt  mp.cc  pipejoint.cc
gstreamer/src/webrtc/mp_web/: CMakeLists.txt  media.cc  media.h  mp_web.cc  pipejoint.cc  pipejoint.h
gstreamer/src/webrtc/simple/: mp.cc  webrtc-profile.c  webrtc.c  webrtcbidirectional.c  webrtcswap.c
js/fontend/: vue.md
js/node/: asynchronization.md  koa.md
lanauge/: gc.md  lru.md  webassembly.md
media/: NAT.md  audio_parse.py  encode.md  h264.md  ice.md  media.md  openwebrtc.md  rtcp.md  rtmp.md  rtsp.md  sdp.md
opensource/: flatbuffers.md  libevent.md
opensource/tesseract/: build-tesser.bat  build.bat  env.bat  todo.md
opensource/tesseract/example/: CMakeLists.txt  main.cc  tesseract-api.cc
others/: csdn.js  geek2md.1.py  geek2md.2.py  geek2md.py  gitemail.js  github.js  github.txt  jianshu.js  linux.md  star.js  url.py  webrtc_socket.io.js
serverless/: istio.md
webrtc/openwebrtc/: struct&API.md
webrtc/sdp/: sdp.md
